--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>小石川ロケット班</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="http://fonts.googleapis.com/earlyaccess/notosansjp.css">
     <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
@@ -24,8 +25,9 @@
           <ul class="menu">
             <li><a href="index.html">トップ</a></li>
             <li><a href="aboutus.html">私たちについて</a></li>
+            <li><a href="history.html">歴史</a></li>
             <li><a href="https://rocket-kss.github.io/blog/">ブログ</a></li>
-            <li><a href="https://rocket-kss.github.io/contact/">お問い合わせはこちら</a></li>
+            <li><a href="https://rocket-kss.github.io/contact/">お問い合わせ</a></li>
             <a href="" class="support">支援する</a><br>
           </ul>
         </nav>
@@ -39,7 +41,7 @@
           <div class="row">
             <div class="col-md-7">
               <br><h2>ロケットを作る</h2>
-              <div class="intro">大会に向けて日本一の技術を使って機体を作ります</div>
+              <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術で、究極の機体を作り上げます。</div>
             </div>
             <div class="col-md-5">
               <br><img src="image/pic1.jpg" class="img-fluid" alt="liftingrocket" width="100%">
@@ -50,21 +52,10 @@
           <div class="row">
             <div class="col-md-7">
               <br><h2>ロケットを飛ばす</h2>
-              <div class="intro">ロケットが出来たら実際に飛ばし、安定した飛行をするか、設計との高度の離れ具合等を調べます。何度も繰り返して行い完成度の高い機体を目指します。</div><br>
+              <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。</div><br>
             </div>
             <div class="col-md-5">
               <br><img src="image/pic2.jpg" class="img-fluid" alt="liftingrocket" width="100%">
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <br><h2>ロケットを壊す</h2>
-              <div class="intro">みんなで公共施設のガラスを割ります</div>
-            </div>
-            <div class="col-md-5">
-              <br><img src="image/pic4.jpg" class="img-fluid" alt="liftingrocket" width="100%">
             </div>
           </div>
         </div>
@@ -72,6 +63,12 @@
           <div class="box"><br>
             モデルロケットについてもっと知る
             <a href="https://jar.or.jp/" class="button2">協会さんのホームページ</a>
+          </div>
+        </div>
+        <div class="container">
+          <div class="box"><br>
+            活動のための資金を集めています。クラウドファンディング宜しくお願いします
+            <a href="" class="support">支援する</a><br>
           </div>
         </div>
         <div class="container">
