--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,8 @@
     <title>小石川ロケット班</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/earlyaccess/notosansjp.css"> 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -24,8 +25,9 @@
           <ul class="menu">
             <li><a href="index.html">トップ</a></li>
             <li><a href="aboutus.html">私たちについて</a></li>
+            <li><a href="history.html">歴史</a></li>
             <li><a href="https://rocket-kss.github.io/blog/">ブログ</a></li>
-            <li><a href="https://rocket-kss.github.io/contact/">お問い合わせはこちら</a></li>
+            <li><a href="https://rocket-kss.github.io/contact/">お問い合わせ</a></li>
             <a href="" class="support">支援する</a><br>
           </ul>
         </nav>
@@ -35,7 +37,7 @@
             <br><h1>ロケット班とは</h1>
             <p>ロケット班について説明します</p>
         </div>
-        <div class="container2">
+        <div class="container">
             <div class="row">
               <div class="col-md-7">
                 <br><h2>ロケットを作る</h2>
@@ -46,13 +48,13 @@
               </div>
             </div>
         </div>
-        <div class="container2"><br>
-          <div class="box"><br>
+        <div class="container">
+          <div class="box">
             活動のための資金を集めています。クラウドファンディング宜しくお願いします
-            <a href="" class="support">支援する</a><br>
+            <a href="" class="support">支援する</a>
           </div>
         </div>
-        <div class="container2">
+        <div class="container">
           <footer class="footer">
             <br>
             <div class="row">
