--- a/contact.html
+++ b/contact.html
@@ -32,41 +32,20 @@
           </ul>
         </nav>
     </header>
-    <div class="main2">
-        <div class="title2">
-            <br><h1>ロケット班とは</h1>
-            <p>ロケット班の活動について説明します</p>
-        </div>
-        <div class="container">
+    <div class="main3">
+        <div class="container2">
             <div class="row">
-              <div class="col-md-7">
-                <br><h2>ロケットを作る</h2>
-                <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術で、究極の機体を作り上げます。<br> ><a href="history.html" style="color:deepskyblue">歴史</a></div>
-              </div>
-              <div class="col-md-5">
-                <br><img src="image/kumitate.jpg" class="img-fluid" alt="liftingrocket" width="100%">
-              </div>
+              　<div class="col-12">
+                  <br><h2>連絡先</h2><br>
+                  <div class="intro2"><a href="mailto:rocket.koishikawa@gmail.com"><i class="fa fa-envelope fa-bg" aria-hidden="true"></i> rocket.koishikawa@gmail.com</a></div><br>
+                  <div class="intro2"><a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-bg"></i> RocketX</a></div><br>
+                  <div class="intro2"><a href="https://www.instagram.com/rocket_kss/"><i class="fa-brands fa-instagram fa-bg"></i> rocket_kss</a></div><br>
+                  <div class="intro2"><a href="#"><i class="fa-brands fa-facebook fa-bg"></i> Unknown</a></div><br>
+                </div>
             </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <br><h2>ロケットを飛ばす</h2>
-              <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。</div><br>
-            </div>
-            <div class="col-md-5">
-              <br><video autoplay controls loop playsinline src="image/rikurix.mp4" class="vid-fluid" alt="ロケット飛翔" width="100%"></video>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="box"><br>
-            活動のための資金を集めています。クラウドファンディング宜しくお願いします
-            <a href="" class="support">支援する</a><br>
-          </div>
-        </div>
-        <div class="container">
-          <footer class="footer">
+        <div class="container2">
+            <footer class="footer">
             <br>
             <div class="row">
                 <div class="col-2"></div>
