--- a/history.html
+++ b/history.html
@@ -27,12 +27,15 @@
             <li><a href="index.html">トップ</a></li>
             <li><a href="aboutus.html">私たちについて</a></li>
             <li><a href="history.html">歴史</a></li>
-            <li><a href="https://rocket-kss.github.io/blog/">ブログ</a></li>
-            <li><a href="https://rocket-kss.github.io/contact/">お問い合わせ</a></li>
+            <li><a href="blog.html">ブログ</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
             <a href="" class="support">支援する</a><br>
           </ul>
         </nav>
     </header>
+   <div class="historyhead">
+    <h2>僕たちはロケットに<br class="br-sp">青春をささげた</h2>
+   </div>
    <div class="cp_timeline04">
     <div class="timeline_item">
       <div class="time_date">
@@ -40,7 +43,14 @@
         <p class="flag">物理研究会 ロケット班 発足！！</p>
       </div>
       <div class="desc">
-        ロケット班は2021年に発足しました。当時中学1年生だった生徒(現班長)が「ロケットの部活を作りたい！」という強い思いを抱き、ロケットの部活を作るために、仲間を集め、資料を作り、校長先生に直接プレゼンを行いました。しかし、火薬を扱う活動はケガや事故のリスクがあり、許可を得るのは簡単ではありませんでした。それでも、生徒たちの熱意が校長先生の心を動かし、「物理研究会ロケット班」として正式に発足することができました。</p>
+        <div class="row">
+          <div class="col-md-8">
+            ロケット班は2021年に発足しました。当時中学1年生だった生徒(現班長)が「ロケットの部活を作りたい！」という強い思いを抱き、ロケットの部活を作るために、仲間を集め、資料を作り、校長先生に直接プレゼンを行いました。しかし、火薬を扱う活動はケガや事故のリスクがあり、許可を得るのは簡単ではありませんでした。それでも、生徒たちの熱意が校長先生の心を動かし、「物理研究会ロケット班」として正式に発足することができました。
+          </div>
+          <div class="col-md-4">
+            <img src="image/first.jpg" class="img-fluid" alt="募集している写真" width="100%">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -49,9 +59,16 @@
         <p class="flag">発足して間もない頃</p>
       </div>
       <div class="desc">
-        結成当初は、ロケットに関する知識やノウハウがなく、頼れる人もいなかったため、製作は試行錯誤の連続でした。
-        <br>設計ソフトの使い方もわからず、インターネットでモデルロケットの作り方を調べながら、手探りで製作を進めました。
-    <br>同級生を誘い、みんなで分担して機体を作り、大会直前になってようやく最後の機体が完成しました。
+        <div class="row">
+          <div class="col-md-8">
+            結成当初は、ロケットに関する知識やノウハウがなく、頼れる人もいなかったため、製作は試行錯誤の連続でした。
+            <br>設計ソフトの使い方もわからず、インターネットでモデルロケットの作り方を調べながら、手探りで製作を進めました。
+            <br>同級生を誘い、みんなで分担して機体を作り、大会直前になってようやく最後の機体が完成しました。
+          </div>
+          <div class="col-md-4">
+            <img src="image/syoki.jpg" class="img-fluid" alt="最初期の機体" width="100%">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -61,10 +78,17 @@
         <p class="flag">全国大会初出場ーそして最下位..</p>
       </div>
       <div class="desc">
-        ロケット班が発足して初めて挑んだ全国大会。
-        <br>しかし、初出場の大会は予想外の展開に。悪天候に見舞われた上に、作った機体のほとんどが危険飛行・墜落により失格(DQ)となり、結果はまさかの最下位....。
-        <br>※全国大会とは、春と秋の年2回、特定非営利活動法人 日本モデルロケット協会が主催する、日本一を競うモデルロケットの大会です
-    <br>※全国大会について<a href="https://jar.or.jp/nationalcompetition/">[協会のページ]</a>をどうぞ
+        <div class="row">
+          <div class="col-md-8">
+            ロケット班が発足して初めて挑んだ全国大会。
+            <br>しかし、初出場の大会は予想外の展開に。悪天候に見舞われた上に、作った機体のほとんどが危険飛行・墜落により失格(DQ)となり、結果はまさかの最下位....。
+            <br>※全国大会とは、春と秋の年2回、特定非営利活動法人 日本モデルロケット協会が主催する、日本一を競うモデルロケットの大会です
+            <br>※全国大会について<a href="https://jar.or.jp/nationalcompetition/" style="color:deepskyblue">[協会のページ]</a>をどうぞ
+          </div>
+          <div class="col-md-4">
+            <img src="image/zenkoku-zentai.jpg" class="img-fluid" alt="集合写像" width="100%">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -74,18 +98,16 @@
         <p class="flag">機体変革の時代</p>
       </div>
       <div class="desc">
-        全国大会の敗北から、設計と素材を大幅に見直す必要がありました。
-    <br>それまで機体の大部分をコピー用紙で作っていましたが、コピー用紙は重量が重く、競技用ロケットには不向きでした。そこで、世界で最も軽い木材とされる「バルサ材」に注目し、機体の軽量化を目指しました。
-    <br>さらに、ロケットの先端部分（ノーズコーン）の製作には3Dプリンターを導入。これにより、複雑な形状の部品も簡単に量産できるようになりました。
-      </div>
-    </div>
-
-    <div class="timeline_item">
-      <div class="time_date">
-        <p class="flag">ロケット甲子園出場断念</p>
-      </div>
-      <div class="desc">
-        内容：未定、なんならこれ無くていいかも
+        <div class="row">
+          <div class="col-md-8">
+            全国大会の敗北から、設計と素材を大幅に見直す必要がありました。
+            <br>それまで機体の大部分をコピー用紙で作っていましたが、コピー用紙は重量が重く、競技用ロケットには不向きでした。そこで、世界で最も軽い木材とされる「バルサ材」に注目し、機体の軽量化を目指しました。
+            <br>さらに、ロケットの先端部分（ノーズコーン）の製作には3Dプリンターを導入。これにより、複雑な形状の部品も簡単に量産できるようになりました。
+          </div>
+          <div class="col-md-4">
+            <img src="image/barsa.jpg" class="img-fluid" alt="バルサ機体" width="100%">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -103,22 +125,26 @@
 
     <div class="timeline_item">
       <div class="time_date">
-        <p class="flag">ロケット甲子園 予選突破</p>
-      </div>
-      <div class="desc">
-        内容：未定、文章はできてる
-      </div>
-    </div>
-
-    <div class="timeline_item">
-      <div class="time_date">
         <p class="time">2025</p>
         <p class="flag">ロケット甲子園 優勝！！</p>
       </div>
       <div class="desc">
-        2025年2月に福島県南相馬市にて行われたロケット甲子園で初出場にして初優勝を飾りました。昨年度は行事の日程がかぶってしまったため、甲子園に出場することがかないませんでした。その分、頑張ってきた成果が発揮することができました。
+        <div class="row">
+          <div class="col-md-8">
+            2025年2月に福島県南相馬市にて行われたロケット甲子園で初出場にして初優勝を飾りました。<br>初めての大型機体の製作にあたり、モデルロケットに詳しい先生方、先輩等に頭を下げ、技術を学びました。頑張ってきた成果を発揮することができ、ついに世界出場が決まりました。
+          </div>
+          <div class="col-md-4">
+            <img src="image/kaushi-yuusyou2.jpg" class="img-fluid" alt="集合写像" width="100%">
+          </div>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="sien">
+    <div class="box"><br>
+        活動のための資金を集めています。クラウドファンディング宜しくお願いします
+        <a href="" class="support">支援する</a><br>
+      </div>
   </div>
   <footer class="footer">
     <br>
@@ -142,6 +168,10 @@
     <span class="copyright">
       都小石川中等　物理研究会　ロケット班
     </span>
+    <br>
+              <span class="copyright">
+                ✉rocket-koishikawa@gmail.com
+              </span>
   </footer>
 
   <script>
