--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <li><a href="index.html">トップ</a></li>
             <li><a href="aboutus.html">私たちについて</a></li>
             <li><a href="history.html">歴史</a></li>
-            <li><a href="https://rocket-kss.github.io/blog/">ブログ</a></li>
-            <li><a href="https://rocket-kss.github.io/contact/">お問い合わせ</a></li>
+            <li><a href="blog.html">ブログ</a></li>
+            <li><a href="contact.html">お問い合わせ</a></li>
             <a href="" class="support">支援する</a><br>
           </ul>
         </nav>
@@ -39,30 +39,24 @@
         </div>        
         <div class="container">
           <div class="row">
+            <div class="col-md-12">
+              <h2>全国大会 <br class="br-sp">ロケット甲子園 <br class="br-sp">２冠達成</h2>
+              <br>
+              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な黒色、コンポジット火薬を用いて90~200m程度上空に飛翔する「モデルロケット」の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会で総合優勝、大型（65cm～1m）機体の全国大会（ロケット甲子園）にて優勝、日本代表として世界大会（IRC、パリ大会）に出場し、パリの空に僕たちのロケットを打ち上げてきます。<br></div>
+            </div>
             <div class="col-md-7">
-              <br><h2>ロケットを作る</h2>
-              <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術で、究極の機体を作り上げます。</div>
-            </div>
+              <br><h2>モデルロケットとは</h2>
+              <div class="intro">モデルロケットは本格的な黒色・コンポジット火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます（エンジンの種類によっては更に飛ばすことも可能ですが、日本国内では打ち上げられる場所がかなり限られてきます）本物のロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところがあります。本格的な航空宇宙の教材として1957年に誕生したモデルロケットは、長い歴史の中で培われた安全設計と安全基準（ルール）により安心して使える科学教育教材です。<br> >詳しくは<a href="aboutus.html" style="color:deepskyblue">こちら</a>（協会のホームぺージ）</div>
+            </div> 
             <div class="col-md-5">
-              <br><img src="image/pic1.jpg" class="img-fluid" alt="liftingrocket" width="100%">
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <br><h2>ロケットを飛ばす</h2>
-              <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。</div><br>
-            </div>
-            <div class="col-md-5">
-              <br><img src="image/pic2.jpg" class="img-fluid" alt="liftingrocket" width="100%">
+              <br><img src="image/pic5.jpg" class="img-fluid" alt="liftingrocket" width="100%">
             </div>
           </div>
         </div>
         <div class="container"><br>
-          <div class="box"><br>
-            モデルロケットについてもっと知る
-            <a href="https://jar.or.jp/" class="button2">協会さんのホームページ</a>
+          <div class="sponser"><br>
+            <h2>スポンサー</h2><br>
+            以下の企業・個人の方々が応援してくださっています。<hr><br><br>404 Not found<br> 
           </div>
         </div>
         <div class="container">
@@ -75,6 +69,7 @@
           <footer class="footer">
             <br>
             <div class="row">
+              <div class="col-12"></div>
               <div class="col-2"></div>
               <div class="col-2">
                 <a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-2x"></i></a>
@@ -94,6 +89,10 @@
             <span class="copyright">
               都小石川中等　物理研究会　ロケット班
             </span>
+            <br>
+              <span class="copyright">
+                ✉rocket-koishikawa@gmail.com
+              </span>
           </footer>
         </div>
       </div>
