--- a/blog.html
+++ b/blog.html
@@ -34,30 +34,25 @@
     </header>
     <div class="main2">
         <div class="title2">
-            <br><h1>ロケット班とは</h1>
-            <p>ロケット班の活動について説明します</p>
+            <br><h1>ブログ</h1>
+            <p>ロケット班の活動報告です</p>
         </div>
         <div class="container">
             <div class="row">
-              <div class="col-md-7">
-                <br><h2>ロケットを作る</h2>
-                <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術で、究極の機体を作り上げます。<br> ><a href="history.html" style="color:deepskyblue">歴史</a></div>
+              <div class="col-md-4">
+                <div class="ribbon12-wrapper">
+                    <h3 class="ribbon12">Title</h3>
+                     こんにちはこんにちはこんにちはこんにちはこんにちはこんにちは
+                     ...
+                     <div class="samuneiru"><img src="image/logo-ksx.png" class="img-fluid" width="90%"></div>
+                     <div class="continue">続きは<a href="#" style="color:deepskyblue">こちら</a></div>
+                </div>
               </div>
-              <div class="col-md-5">
-                <br><img src="image/kumitate.jpg" class="img-fluid" alt="liftingrocket" width="100%">
+              <div class="col-md-4">
+              </div>
+              <div class="col-md-4">
               </div>
             </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-md-7">
-              <br><h2>ロケットを飛ばす</h2>
-              <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。</div><br>
-            </div>
-            <div class="col-md-5">
-              <br><video autoplay controls loop playsinline src="image/rikurix.mp4" class="vid-fluid" alt="ロケット飛翔" width="100%"></video>
-            </div>
-          </div>
         </div>
         <div class="container">
           <div class="box"><br>
