--- a/aboutus.html
+++ b/aboutus.html
@@ -80,7 +80,7 @@
                   <a href="https://www.youtube.com/@rocket_kss"><i class="fa-brands fa-youtube fa-2x"></i></a>
                 </div>
                 <div class="col-2">
-                  <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=61572793517480"><i class="fa-brands fa-facebook fa-2x"></i></a>
                 </div>
                 <div class="col-2"></div>
               </div>
