--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
                   <div class="intro2"><a href="mailto:rocket.koishikawa@gmail.com"><i class="fa fa-envelope fa-bg" aria-hidden="true"></i> rocket.koishikawa@gmail.com</a></div><br>
                   <div class="intro2"><a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-bg"></i> RocketX</a></div><br>
                   <div class="intro2"><a href="https://www.instagram.com/rocket_kss/"><i class="fa-brands fa-instagram fa-bg"></i> rocket_kss</a></div><br>
-                  <div class="intro2"><a href="#"><i class="fa-brands fa-facebook fa-bg"></i> Unknown</a></div><br>
+                  <div class="intro2"><a href="https://www.facebook.com/profile.php?id=61572793517480"><i class="fa-brands fa-facebook fa-bg"></i> Unknown</a></div><br>
                 </div>
             </div>
         </div>
@@ -59,7 +59,7 @@
                   <a href="https://www.youtube.com/@rocket_kss"><i class="fa-brands fa-youtube fa-2x"></i></a>
                 </div>
                 <div class="col-2">
-                  <a href="#"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=61572793517480"><i class="fa-brands fa-facebook fa-2x"></i></a>
                 </div>
                 <div class="col-2"></div>
               </div>
