--- a/index.html
+++ b/index.html
@@ -46,10 +46,14 @@
             </div>
             <div class="col-md-7">
               <br><h2>モデルロケットとは</h2>
-              <div class="intro">モデルロケットは本格的な黒色・コンポジット火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます（エンジンの種類によっては更に飛ばすことも可能ですが、日本国内では打ち上げられる場所がかなり限られてきます）本物のロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところがあります。本格的な航空宇宙の教材として1957年に誕生したモデルロケットは、長い歴史の中で培われた安全設計と安全基準（ルール）により安心して使える科学教育教材です。<br> >詳しくは<a href="aboutus.html" style="color:deepskyblue">こちら</a>（協会のホームぺージ）</div>
+              <div class="intro">モデルロケットは本格的な黒色・コンポジット火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>本物のロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br> >詳しくは<a href="aboutus.html" style="color:deepskyblue">こちら</a>（私たちについて）</div>
             </div> 
             <div class="col-md-5">
-              <br><img src="image/pic5.jpg" class="img-fluid" alt="liftingrocket" width="100%">
+              <div class="img-frame">
+                <div class="img-01"></div>
+                <div class="img-02"></div>
+                <div class="img-03"></div>
+              </div>
             </div>
           </div>
         </div>
