--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
             <div class="col-md-12">
               <h2>全国大会 <br class="br-sp">ロケット甲子園 <br class="br-sp">２冠達成</h2>
               <br>
-              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な黒色、コンポジット火薬を用いて90~200m程度上空に飛翔する「モデルロケット」の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会で総合優勝、大型（65cm～1m）機体の全国大会（ロケット甲子園）にて優勝、日本代表として世界大会（IRC、パリ大会）に出場し、パリの空に僕たちのロケットを打ち上げてきます。<br></div>
+              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する「モデルロケット」の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会で総合優勝、大型（65cm～1m）機体の全国大会（ロケット甲子園）にて優勝、日本代表として世界大会（IRC、パリ大会）に出場し、パリの空に僕たちのロケットを打ち上げてきます。<br></div>
             </div>
             <div class="col-md-7">
               <br><h2>モデルロケットとは</h2>
-              <div class="intro">モデルロケットは本格的な黒色・コンポジット火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>本物のロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br> >詳しくは<a href="aboutus.html" style="color:deepskyblue">こちら</a>（私たちについて）</div>
+              <div class="intro">モデルロケットは本格的な黒色・コンポジット火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>JAXAやNASAなどの宇宙に飛ばすロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br> >詳しくは<a href="aboutus.html" style="color:deepskyblue">こちら</a>（私たちについて）</div>
             </div> 
             <div class="col-md-5">
               <div class="img-frame">
