--- a/aboutus.html
+++ b/aboutus.html
@@ -41,10 +41,10 @@
             <div class="row">
               <div class="col-md-7">
                 <br><h2>ロケットを作る</h2>
-                <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術で、究極の機体を作り上げます。<br> ><a href="history.html" style="color:deepskyblue">歴史</a></div>
+                <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを一から設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術から極限まで極めた機体を設計し、究極の機体を作り上げます。<br> ><a href="history.html" style="color:deepskyblue">歴史</a></div>
               </div>
               <div class="col-md-5">
-                <br><img src="image/kumitate.jpg" class="img-fluid" alt="liftingrocket" width="100%">
+                <br><img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
               </div>
             </div>
         </div>
