--- a/history.html
+++ b/history.html
@@ -86,7 +86,7 @@
             <br>※全国大会について<a href="https://jar.or.jp/nationalcompetition/" style="color:deepskyblue">[協会のページ]</a>をどうぞ
           </div>
           <div class="col-md-4">
-            <img src="image/zenkoku-zentai.jpg" class="img-fluid" alt="集合写像" width="100%">
+            <img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
           </div>
         </div>
       </div>
@@ -117,9 +117,16 @@
         <p class="flag">念願の全国大会総合優勝！！
       </div>
       <div class="desc">
-        ついに、念願だった全国大会で総合優勝を果たしました。
-    <br>成績、高度競技では1位・2位・3位を独占し、滞空競技では2位を獲得。さらに、総合優勝と準優勝を同時に達成しました。
-    <br>最初はたった1人の生徒の思いから始まったロケット班。2年間の努力が実を結び、やっと結果を残すことができました。この結果を残せたのは、学校の先生方や保護者の皆さま、そしてロケット製作のアドバイスをくださった方々のおかげです。
+        <div class="row">
+          <div class="col-md-8">
+            ついに、念願だった全国大会で総合優勝を果たしました。
+            <br>成績、高度競技では1位・2位・3位を独占し、滞空競技では2位を獲得。さらに、総合優勝と準優勝を同時に達成しました。
+            <br>最初はたった1人の生徒の思いから始まったロケット班。2年間の努力が実を結び、やっと結果を残すことができました。この結果を残せたのは、学校の先生方や保護者の皆さま、そしてロケット製作のアドバイスをくださった方々のおかげです。
+          </div>
+          <div class="col-md-4">
+            <img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
+          </div>
+        </div>
       </div>
     </div>
 
@@ -134,7 +141,7 @@
             2025年2月に福島県南相馬市にて行われたロケット甲子園で初出場にして初優勝を飾りました。<br>初めての大型機体の製作にあたり、モデルロケットに詳しい先生方、先輩等に頭を下げ、技術を学びました。頑張ってきた成果を発揮することができ、ついに世界出場が決まりました。
           </div>
           <div class="col-md-4">
-            <img src="image/kaushi-yuusyou2.jpg" class="img-fluid" alt="集合写像" width="100%">
+            <img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
           </div>
         </div>
       </div>
