--- a/blog.html
+++ b/blog.html
@@ -48,10 +48,10 @@
             <div class="row">
               <div class="col-md-4">
                 <div class="ribbon12-wrapper">
-                    <h3 class="ribbon12">Title</h3>
-                     こんにちはこんにちはこんにちはこんにちはこんにちはこんにちは
+                    <h3 class="ribbon12">モデルロケット甲子園優勝！</h3>
+                      モデルロケット甲子園とは？　モデルロケット甲子園とは中高生の
                      ...
-                     <div class="samuneiru"><img src="image/logo-ksx.png" class="img-fluid" width="90%"></div>
+                     <div class="samuneiru"><img src="" class="img-fluid" width="90%" alt="顔が映っているため使用不可"></div>
                      <div class="continue">続きは<a href="blog/202502181.html" style="color:deepskyblue">こちら</a></div>
                 </div>
               </div>
