--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する「モデルロケット」の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で総合優勝、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて優勝、日本代表として世界大会（IRC、パリ大会）に出場し、パリの空に僕たちのロケットを打ち上げてきます。<br></div>
             </div>
             <div class="col-md-7">
-              <br><h2>小石川ロケット班<br class="br-sp">について知る</h2>
+              <h2>小石川ロケット班<br class="br-sp">について知る</h2>
               <div class="switchdsp">
                 <label for="l-1">
                 <span class="clicktxt"><i class="fas fa-angle-down"></i>モデルロケットとは</span>
