--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="index.css">
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NHGQ3M5XCF"></script>
@@ -74,20 +75,25 @@
               </div>
               <div class="switchdsp">
                 <label for="l-3">
-                  <span class="clicktxt"><a href="history.html"><i class="fas fa-external-link-alt"></i>ロケット班史</a></span>
+                  <span class="clicktxt"><a href="history.html"><i class="fas fa-angle-right"></i>ロケット班史</a></span>
                 </label>
               </div>
               <div class="switchdsp">
                 <label for="l-3">
-                  <span class="clicktxt"><a href="contact.html"><i class="fas fa-external-link-alt"></i>連絡先</a></span>
+                  <span class="clicktxt"><a href="contact.html"><i class="fas fa-angle-right"></i>連絡先</a></span>
                 </label>
               </div>
             </div> 
             <div class="col-md-5">
-              <div class="img-frame">
-                <div class="img-01"></div>
-                <div class="img-02"></div>
-                <div class="img-03"></div>
+              <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide"><img src="image/pic4.jpg" alt="image"></div>
+                  <div class="swiper-slide"><img src="image/rikurixmany.jpg" alt="image"></div>
+                  <div class="swiper-slide"><img src="image/pic6.jpg" alt="image"></div>
+                </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
               </div>
             </div>
           </div>
@@ -139,6 +145,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
