--- a/aboutus.html
+++ b/aboutus.html
@@ -62,7 +62,7 @@
               <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。</div><br>
             </div>
             <div class="col-md-5">
-              <br><video autoplay controls loop playsinline src="image/rikurix.mp4" class="vid-fluid" alt="ロケット飛翔" width="100%"></video>
+              <br><video controls loop playsinline src="image/rikurix.mp4" class="vid-fluid" alt="ロケット飛翔" width="100%"></video>
             </div>
           </div>
         </div>
