--- a/aboutus.html
+++ b/aboutus.html
@@ -42,65 +42,207 @@
     <div class="main2">
         <div class="title2">
             <br><h1>ロケット班とは</h1>
-            <p>ロケット班の活動について説明します</p>
+            <p>ロケット班の活動について<br class="br-sp">ロケットの製作の過程をもとに説明します</p>
         </div>
-        <div class="container">
-            <div class="row">
-              <div class="col-md-7">
-                <br><h2>ロケットを作る</h2>
-                <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを一から設計・制作します。小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術から極限まで極めた機体を設計し、究極の機体を作り上げます。<br> ><a href="history.html" style="color:deepskyblue">歴史</a></div>
-              </div>
-              <div class="col-md-5">
-                <br><img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
-              </div>
-            </div>
-        </div>
-        <div class="container">
+        <div class="aboutusrow">
           <div class="row">
-            <div class="col-md-7">
-              <br><h2>ロケットを飛ばす</h2>
-              <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。</div><br>
-            </div>
-            <div class="col-md-5">
-              <br><video controls loop playsinline src="image/rikurix.mp4" class="vid-fluid" alt="ロケット飛翔" width="100%"></video>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="box"><br>
-            活動のための資金を集めています。クラウドファンディング宜しくお願いします
-            <a href="" class="support">支援する</a><br>
-          </div>
-        </div>
-        <div class="container">
-          <footer class="footer">
-            <br>
-            <div class="row">
-                <div class="col-2"></div>
-                <div class="col-2">
-                  <a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-2x"></i></a>
+            <div class="col-md-12">
+              <div class="container4">
+                <br><h2>ロケットを設計する</h2>
+                <div class="intro3">
+                  <div class="row">
+                    <div class="col-md-7">
+                      <div class="intro">モデルロケットを作りにあたっては、まずは設計から始まります。フリーソフトウェアのOpenRocketを主に使用し、重心、空気抵抗等を計算し、うまく飛ぶ機体を設計しています。<br>重心位置が適切でなければ、飛行姿勢が安定しないため、設計とあった機体の製作が重要です。<br>最も製作に当たって重要な部分です。</div>
+                    </div>
+                    <div class="col-md-5">
+                      <img src="image/design.jpg" alt="設計" width="95%"><br>《写真》実際に全国大会に出た機体の設計図面
+                    </div>
+                  </div>
                 </div>
-                <div class="col-2">
-                  <a href="https://www.instagram.com/rocket_kss/"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                </div>
-                <div class="col-2">
-                  <a href="https://www.youtube.com/@rocket_kss"><i class="fa-brands fa-youtube fa-2x"></i></a>
-                </div>
-                <div class="col-2">
-                  <a href="https://www.facebook.com/profile.php?id=61572793517480"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                </div>
-                <div class="col-2"></div>
               </div>
-              <br>
-              <span class="copyright">
-                都小石川中等　物理研究会　ロケット班
-              </span>
-              <br>
-              <span class="copyright">
-                ✉rocket-koishikawa@gmail.com
-              </span>
             </div>
-          </footer>
+            <div class="col-md-12">
+              <div class="container4">
+                <br><h2>ロケットを作る</h2>
+                <div class="intro3">
+                  <div class="row">
+                    <div class="col-md-9">
+                      <div class="intro">私たちは本格的な火薬を用いたモデルロケットを製作しています。大会や学校のイベントに向けて、ロケットを一から設計・制作します。<br>小型機体の大会でも、大型機体の大会でも優勝した、日本一の制作技術から極限まで極めた機体を設計し、究極の機体を作り上げます。<br>右もしくは下の図をご覧ください。モデルロケットにおける部品の名称です。（引用元：日本モデルロケット協会）<br>以下モデルロケットの部品それぞれにおいて、私たちがどのように工夫し作っているか説明します。<br> ><a href="history.html" style="color:deepskyblue">歴史</a>(参考)</div>
+                    </div>
+                    <div class="col-md-3">
+                      <img src="image/sekkei.jpg" alt="設計" width="100%">
+                    </div>
+                  </div>
+                  <br>
+                  <br>
+                  <div class="dspcontainer">
+                    <div class="switchdsp">
+                      <label for="l-1">
+                      <span class="clicktxt2"><i class="fas fa-angle-down"></i>ノーズコーン</span>
+                      </label>
+                      <input type="checkbox" id="l-1"><div class="dsp">
+                      <div class="row">
+                        <div class="col-md-7">
+                          <strong>説明</strong><br>
+                          <div class="intro3">ノーズコーンは空気抵抗を減らすためにオジーブ型とよばれる流線形の形状にしています。複雑な形状のでも量産できるように3Dプリンターで製造しています。印刷したノーズコーンを表面が鏡のようにピカピカになるまでやすりで削ります。そうすることによって、空気による摩擦を最小にして、ロケット全体のデザインを向上させます。</div>
+                          <strong>形状</strong><br>
+                          <div class="intro3">空気抵抗の少ない形状にするために、数式を利用して3Dデータを製作しています。<br>
+                            y = SQRT((R² - x²)) - (R - L)<br>
+                            R…ノーズコーンの直径　L…ノーズコーンの長さ<br>
+                            次の式にノーズコーンの直径と長さを代入するとオジーブ型の断面図が得られます。</div>
+                          <strong>注意点</strong><br>
+                          <div class="intro3">3Dプリンターの印刷は失敗することもしばしばあります。失敗したらパラメーターを調整しながら印刷の精度を上げていきます。</div>
+                        </div>
+                        <div class="col-md-5">
+                          <img src="image/nosesippai.jpg" alt="失敗したノーズコーン" width="100%"><br>《写真》印刷に失敗してしまった例
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="dspcontainer">
+                    <div class="switchdsp">
+                      <label for="l-2">
+                      <span class="clicktxt2"><i class="fas fa-angle-down"></i>ボディチューブ</span>
+                      </label>
+                      <input type="checkbox" id="l-2"><div class="dsp">
+                      <div class="row">
+                        <div class="col-md-12">
+                          <div class="intro3">ロケットのフレームとなるボディーは、機体の大部分を占めるため、軽量かつ強度が必要です。</div><br>
+                          <strong>ボディの作り方</strong><br>
+                          <div class="intro3">①FRPの型に離型剤を塗ります<br>
+                            ②ガラス繊維という専用の強化繊維にエ樹脂を塗り、型に巻きつけます<br>
+                            ③硬化するまで一日ほど待って、完全に硬化したら型から取り外して完成です
+                          </div>
+                          <strong>苦労したところ</strong><br>
+                          <div class="intro3">最初はコピー用紙でボディーチューブを作っていましたが、重量が重いため、競技用ロケットには不向きでした。そこで、FRPという軽くて強い新しい素材を採用しました。<br>
+                            しかし、FRPを使い始めた当初は、打ち上げの途中でボディーが折れてしまったり、逆噴射の熱で焦げて強度が弱くなったりするトラブルが発生しました。そのような失敗から、樹脂をできるだけ均等に塗ることで、強度を保ちつつ無駄な重量を削減するという工夫をしました。<br>
+                            また、FRPは製作に最低でも1日かかるため、ロケット全体の製作期間が長くなるという課題もありました。そこで、計画的にボディーを生産することで、効率的に製作を進められるよう工夫しました。<br>
+                          </div>
+                          <strong>FRPとは？</strong><br>
+                          <div class="intro3">FRPとは、Fiber Reinforced Plasticの略称で、日本語では繊維強化プラスチックと呼ばれます。FRPとはその名の通り繊維によって強化されたプラスチックのことです。比強度(引張強度を密度で割ったもの。強度÷重さ)で比較すると、鉄やアルミニウムより優れた耐久性を持っています。FRPは軽量で高強度な構造を求められる分野で使われます。
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="dspcontainer">
+                    <div class="switchdsp">
+                      <label for="l-3">
+                      <span class="clicktxt2"><i class="fas fa-angle-down"></i>フィン</span>
+                      </label>
+                      <input type="checkbox" id="l-3"><div class="dsp">
+                      <div class="row">
+                        <div class="col-md-7">
+                          <strong>説明</strong><br>
+                          <div class="intro3">ロケットの姿勢を安定させるため、適切な形状を設計します</div>
+                          <strong>作り方</strong><br>
+                          <div class="intro3">①バルサ材にフィンの形をケガキする<br>
+                            ②線にそってバルサ材を切ります<br>
+                            ③切り出したバルサ材にガラス繊維をエポキシ樹脂ではり、FRP加工をします</div>
+                          <strong>フラッターについて</strong><br>
+                          <div class="intro3">ロケットが高速で飛行すると、フィンには強い空気の力がかかります。フィンに十分な強度がないと、空気抵抗によってフィンが曲がり、激しく振動する現象が発生します。これをフラッターといいます。フラッターがおこるとロケットの高度が大幅に下がってしまうので、フィンには打ち上げに耐えられる十分な強度が求められます。僕たちは実際にバルサ材を売っている店舗へ行き、自分たちの手で軽くて強度の高いバルサ材を選ぶようにしています。
+                          </div>
+                        </div>
+                        <div class="col-md-5">
+                          <img src="image/fin.jpg" alt="フィン" width="100%"><br>《写真》この機体の下についている、翼のようなものがフィン
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="dspcontainer">
+                    <div class="switchdsp">
+                      <label for="l-4">
+                      <span class="clicktxt2"><i class="fas fa-angle-down"></i>パラシュート</span>
+                      </label>
+                      <input type="checkbox" id="l-4"><div class="dsp">
+                      <div class="row">
+                        <div class="col-md-7">
+                          <strong>作り方</strong><br>
+                          <div class="intro3">①市販のビニールごみ袋を用意します。<br>
+                            ②ごみ袋綺麗な円形になるように切り出します。<br>
+                            ③穴開けパンチを使い、間隔が均等になるように穴を12個開けます。<br>
+                            ④釣り糸を穴と同じ本数切り(長さはパラシュートの直径と同じ)、穴に結びます<br>
+                            ⑤結び目がほどけないように上からテープで留めます。<br>
+                            ⑥12本の糸の先端を結んで一つにまとめます。<br>
+                            ⑦ショックコード(ゴムひもなど、機体とパラシュートをつなげるため)を⑥の糸に結びます。
+                            </div>
+                          <strong>組み立て</strong><br>
+                          <div class="intro3">➀ケプラー糸の先端をノーズコーン、もう一方の端をノーズコーンに瞬間接着剤で仮止めし、上からテープで固定します。<br>
+                            ②エンジンマウントをボディーに差し込み、エポキシ接着剤でボディーの内面と接着します。<br>
+                            ③フィンをボディーの側面に瞬間接着剤で接着します。このとき、ロケットを真上から見たときに、フィンが均等についていることを確認します。フィンの取り付けが不正確だと、飛行中にロケットが回転しやすくなり、空気抵抗が増加してしまいます。<br>                            
+                            ④使用済みのエンジンを装填した状態で重心を図ります。<br>
+                            ⑤④で測定した重心位置に、パラシュートのショックコードを接着剤で固定します。パラシュートを重心位置に取り付けることで、ロケットの降下時に機体が横向きになり、横風に流されにくくなり、落下時間を延ばすことができます。<Br>
+                            ※例外的に小型機体の高度用の機体では、パラシュートでは重たいため、パラシュートではなく、スズランテープを切ったような長方形の形のストリーマーという回収装置を取り付けます。
+                        </div>
+                        <div class="col-md-5">
+                          <img src="image/pic2.jpg" alt="パラシュト" width="100%"><br>《写真》パラシュートが開いた機体
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+          </div>
+          </div>
+        
+        </div>
+            </div>
+            </div>
+            <div class="col-md-12">
+              <div class="container4">
+                <div class="row">
+                  <div class="col-md-7">
+                    <br><h2>ロケットを飛ばす</h2>
+                    <div class="intro">ロケットが完成したら、実際に飛ばして飛行の様子を確認します。実験の繰り返してデータをとり、設計との差を調べます。何度も打ち上げ、何度もシミュレーションをして、精度の高い機体を目指します。設計を一から作り直す、といったこともよくあります。<br>何度も試行し、この３つのサイクルを回すことが我々の活動の根幹です。</div><br>
+                  </div>
+                  <div class="col-md-5">
+                    <br><video controls loop playsinline src="image/rikurix.mp4" class="vid-fluid" alt="ロケット飛翔" width="95%"></video><br>《動画》ロケットの打ち上げ
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="container4">
+                <div class="box"><br>
+                  活動のための資金を集めています。クラウドファンディング宜しくお願いします
+                  <a href="" class="support">支援する</a><br>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="container4">
+                <footer class="footer">
+                  <br>
+                  <div class="row">
+                      <div class="col-2"></div>
+                      <div class="col-2">
+                        <a href="https://x.com/rocket_kss"><i class="fa-brands fa-x-twitter fa-2x"></i></a>
+                      </div>
+                      <div class="col-2">
+                        <a href="https://www.instagram.com/rocket_kss/"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                      </div>
+                      <div class="col-2">
+                        <a href="https://www.youtube.com/@rocket_kss"><i class="fa-brands fa-youtube fa-2x"></i></a>
+                      </div>
+                      <div class="col-2">
+                        <a href="https://www.facebook.com/profile.php?id=61572793517480"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                      </div>
+                      <div class="col-2"></div>
+                    </div>
+                    <br>
+                    <span class="copyright">
+                      都小石川中等　物理研究会　ロケット班
+                    </span>
+                    <br>
+                    <span class="copyright">
+                      ✉rocket-koishikawa@gmail.com
+                    </span>
+                  </div>
+              </footer>
+            </div>
+          </div>
         </div>
       </div>
     </div>
