--- a/index.html
+++ b/index.html
@@ -56,32 +56,34 @@
             </div>
             <div class="col-md-7">
               <h2>小石川ロケット班<br class="br-sp">について知る</h2>
-              <div class="switchdsp">
-                <label for="l-1">
-                <span class="clicktxt"><i class="fas fa-angle-down"></i>モデルロケットとは</span>
-                </label>
-                <input type="checkbox" id="l-1"><div class="dsp">
-                <div class="intro">モデルロケットは本格的な火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>JAXAやNASAなどの宇宙に飛ばすロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br> >詳しくは<a href="https://jar.or.jp/" style="color:deepskyblue">こちら</a>（モデルロケット協会のページ）</div>
+              <div class="dspcontainer">
+                <div class="switchdsp">
+                  <label for="l-1">
+                  <span class="clicktxt"><i class="fas fa-angle-down"></i>モデルロケットとは</span>
+                  </label>
+                  <input type="checkbox" id="l-1"><div class="dsp">
+                  <div class="intro">モデルロケットは本格的な火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>JAXAやNASAなどの宇宙に飛ばすロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br> >詳しくは<a href="https://jar.or.jp/" style="color:deepskyblue">こちら</a>（モデルロケット協会のページ）</div>
+                  </div>
                 </div>
-              </div>
-              <div class="switchdsp">
-                <label for="l-2">
-                <span class="clicktxt"><i class="fas fa-angle-down"></i>活動について知る</span>
-                </label>
-                <input type="checkbox" id="l-2">
-                <div class="dsp">
-                  <div class="intro">毎週金曜日に物理研究会の部室、物理室で活動し、ロケットの設計・製作・打ち上げをしています。<br>春と秋の全国大会に毎年参加し、今年度は初めて、ロケット甲子園にも挑戦しました。<br> ><a href="aboutus.html" style="color:deepskyblue">更に詳しく知る</a><br> ><a href="blog.html" style="color:deepskyblue">活動報告</a>（ブログ）</div>
+                <div class="switchdsp">
+                  <label for="l-2">
+                  <span class="clicktxt"><i class="fas fa-angle-down"></i>活動について知る</span>
+                  </label>
+                  <input type="checkbox" id="l-2">
+                  <div class="dsp">
+                    <div class="intro">毎週金曜日に物理研究会の部室、物理室で活動し、ロケットの設計・製作・打ち上げをしています。<br>春と秋の全国大会に毎年参加し、今年度は初めて、ロケット甲子園にも挑戦しました。<br> ><a href="aboutus.html" style="color:deepskyblue">更に詳しく知る</a><br> ><a href="blog.html" style="color:deepskyblue">活動報告</a>（ブログ）</div>
+                  </div>
                 </div>
-              </div>
-              <div class="switchdsp">
-                <label for="l-3">
-                  <span class="clicktxt"><a href="history.html"><i class="fas fa-angle-right"></i>ロケット班史</a></span>
-                </label>
-              </div>
-              <div class="switchdsp">
-                <label for="l-3">
-                  <span class="clicktxt"><a href="contact.html"><i class="fas fa-angle-right"></i>連絡先</a></span>
-                </label>
+                <div class="switchdsp">
+                  <label for="l-3">
+                    <span class="clicktxt"><a href="history.html"><i class="fas fa-angle-right"></i>ロケット班史</a></span>
+                  </label>
+                </div>
+                <div class="switchdsp">
+                  <label for="l-3">
+                    <span class="clicktxt"><a href="contact.html"><i class="fas fa-angle-right"></i>連絡先</a></span>
+                  </label>
+                </div>
               </div>
             </div> 
             <div class="col-md-5">
