--- a/aboutus.html
+++ b/aboutus.html
@@ -42,7 +42,7 @@
     <div class="main2">
         <div class="title2">
             <br><h1>ロケット班とは</h1>
-            <p>ロケット班の活動について<br class="br-sp">ロケットの製作の過程をもとに説明します</p>
+            <p>ロケット班の活動について<br class="br-sp">ロケットの製作の過程等から説明します</p>
         </div>
         <div class="aboutusrow">
           <div class="row">
@@ -107,19 +107,19 @@
                       <input type="checkbox" id="l-2"><div class="dsp">
                       <div class="row">
                         <div class="col-md-12">
-                          <div class="intro3">ロケットのフレームとなるボディーは、機体の大部分を占めるため、軽量かつ強度が必要です。</div><br>
+                          <div class="intro4">ロケットのフレームとなるボディーは、機体の大部分を占めるため、軽量かつ強度が必要です。</div><br>
                           <strong>ボディの作り方</strong><br>
-                          <div class="intro3">①FRPの型に離型剤を塗ります<br>
+                          <div class="intro4">①FRPの型に離型剤を塗ります<br>
                             ②ガラス繊維という専用の強化繊維にエ樹脂を塗り、型に巻きつけます<br>
                             ③硬化するまで一日ほど待って、完全に硬化したら型から取り外して完成です
                           </div>
                           <strong>苦労したところ</strong><br>
-                          <div class="intro3">最初はコピー用紙でボディーチューブを作っていましたが、重量が重いため、競技用ロケットには不向きでした。そこで、FRPという軽くて強い新しい素材を採用しました。<br>
+                          <div class="intro4">最初はコピー用紙でボディーチューブを作っていましたが、重量が重いため、競技用ロケットには不向きでした。そこで、FRPという軽くて強い新しい素材を採用しました。<br>
                             しかし、FRPを使い始めた当初は、打ち上げの途中でボディーが折れてしまったり、逆噴射の熱で焦げて強度が弱くなったりするトラブルが発生しました。そのような失敗から、樹脂をできるだけ均等に塗ることで、強度を保ちつつ無駄な重量を削減するという工夫をしました。<br>
                             また、FRPは製作に最低でも1日かかるため、ロケット全体の製作期間が長くなるという課題もありました。そこで、計画的にボディーを生産することで、効率的に製作を進められるよう工夫しました。<br>
                           </div>
                           <strong>FRPとは？</strong><br>
-                          <div class="intro3">FRPとは、Fiber Reinforced Plasticの略称で、日本語では繊維強化プラスチックと呼ばれます。FRPとはその名の通り繊維によって強化されたプラスチックのことです。比強度(引張強度を密度で割ったもの。強度÷重さ)で比較すると、鉄やアルミニウムより優れた耐久性を持っています。FRPは軽量で高強度な構造を求められる分野で使われます。
+                          <div class="intro4">FRPとは、Fiber Reinforced Plasticの略称で、日本語では繊維強化プラスチックと呼ばれます。FRPとはその名の通り繊維によって強化されたプラスチックのことです。比強度(引張強度を密度で割ったもの。強度÷重さ)で比較すると、鉄やアルミニウムより優れた耐久性を持っています。FRPは軽量で高強度な構造を求められる分野で使われます。
                           </div>
                         </div>
                       </div>
@@ -174,6 +174,7 @@
                             ⑤④で測定した重心位置に、パラシュートのショックコードを接着剤で固定します。パラシュートを重心位置に取り付けることで、ロケットの降下時に機体が横向きになり、横風に流されにくくなり、落下時間を延ばすことができます。<Br>
                             ※例外的に小型機体の高度用の機体では、パラシュートでは重たいため、パラシュートではなく、スズランテープを切ったような長方形の形のストリーマーという回収装置を取り付けます。
                         </div>
+                        </div>
                         <div class="col-md-5">
                           <img src="image/pic2.jpg" alt="パラシュト" width="100%"><br>《写真》パラシュートが開いた機体
                         </div>
@@ -205,8 +206,21 @@
             </div>
             <div class="col-md-12">
               <div class="container4">
+                <div class="row">
+                  <div class="col-md-7">
+                    <br><h2>その他の活動</h2>
+                    <div class="intro">・春・秋にJAXAの筑波宇宙センターで開催されるモデルロケット全国大会に毎年出場<br>・ロケット甲子園に出場（2024年度）<br>・定期的に行われる校内での発表会（SSH発表会、フィロソフィー発表会）に参加、展示<br>・創作展（文化祭）、学校説明会での部活動としての展示、小学生や地域の方々に向けてのロケット打ち上げの実演<br>・後輩の指導<br>・東京大学メタバース学部との共催、サイエンスフェスタへの出展等外部の発表会にも積極的に参加<br><br>小学生や後輩、外部の方々に積極的に活動を説明・教えたりすることで、日本の航空宇宙産業を少しでも盛り上げられれば、と思いこれらの活動を行っています。</div><br>
+                  </div>
+                  <div class="col-md-5">
+                    <br><br><img src="image/setumei.jpg" alt="モデルロケットを地域の方々に説明" width="95%"><br>《画像》学校説明会での小学生への説明、打ち上げ
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="container4">
                 <div class="box"><br>
-                  活動のための資金を集めています。クラウドファンディング宜しくお願いします
+                  世界大会出場のための資金を集めています。クラウドファンディング宜しくお願いします
                   <a href="" class="support">支援する</a><br>
                 </div>
               </div>
