--- a/history.html
+++ b/history.html
@@ -157,7 +157,7 @@
   </div>
   <div class="sien">
     <div class="box"><br>
-        活動のための資金を集めています。クラウドファンディング宜しくお願いします
+      世界大会出場のための資金を集めています。クラウドファンディング宜しくお願いします
         <a href="" class="support">支援する</a><br>
       </div>
   </div>
