--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-12">
               <h2>全国大会 <br class="br-sp">ロケット甲子園 <br class="br-sp">２冠達成</h2>
               <br>
-              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の<strong>設計、開発</strong>を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、パリの空に僕たちのロケットを打ち上げてきます。<br></div>
+              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の<strong>設計、開発</strong>を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を<strong>地域の方々、小学生、後輩等</strong>に広める活動にも<strong>積極的に参加</strong>しています。</div>
             </div>
             <div class="col-md-7">
               <h2>小石川ロケット班<br class="br-sp">について知る</h2>
@@ -71,7 +71,7 @@
                   </label>
                   <input type="checkbox" id="l-2">
                   <div class="dsp">
-                    <div class="intro">毎週金曜日に物理研究会の部室、物理室で活動し、ロケットの設計・製作・打ち上げをしています。<br>春と秋の全国大会に毎年参加し、今年度は初めて、ロケット甲子園にも挑戦しました。<br> ><a href="aboutus.html" style="color:deepskyblue">更に詳しく知る</a><br> ><a href="blog.html" style="color:deepskyblue">活動報告</a>（ブログ）</div>
+                    <div class="intro">毎週金曜日に物理研究会の部室、物理室で活動し、ロケットの設計・製作・打ち上げをしています。<br>春と秋の全国大会に毎年参加し、今年度は初めて、ロケット甲子園にも挑戦しました。<br> >詳しくは<a href="aboutus.html" style="color:deepskyblue">こちら</a><br> ><a href="blog.html" style="color:deepskyblue">活動報告</a>（ブログ）</div>
                   </div>
                 </div>
                 <div class="switchdsp">
@@ -108,7 +108,7 @@
         </div>
         <div class="container">
           <div class="box"><br>
-            活動のための資金を集めています。クラウドファンディング宜しくお願いします
+            世界大会出場のための資金を集めています。クラウドファンディング宜しくお願いします
             <a href="" class="support">支援する</a><br>
           </div>
         </div>
