--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col-md-12">
               <h2>全国大会 <br class="br-sp">ロケット甲子園 <br class="br-sp">２冠達成</h2>
               <br>
-              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の<strong>設計、開発</strong>を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を<strong>地域の方々、小学生、後輩等</strong>に広める活動にも<strong>積極的に参加</strong>しています。</div>
+              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の<strong>設計、開発</strong>を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、<strong>パリ航空ショー</strong>に参加、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を<strong>地域の方々、小学生、後輩等</strong>に広める活動にも積極的に参加し、モデルロケットの<strong>良さを広め</strong>、<strong>挑戦してみるとっかかりを作る</strong>活動もしています。</div>
             </div>
             <div class="col-md-7">
               <h2>小石川ロケット班<br class="br-sp">について知る</h2>
@@ -62,7 +62,7 @@
                   <span class="clicktxt"><i class="fas fa-angle-down"></i>モデルロケットとは</span>
                   </label>
                   <input type="checkbox" id="l-1"><div class="dsp">
-                  <div class="intro">モデルロケットは本格的な火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>JAXAやNASAなどの宇宙に飛ばすロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br> >詳しくは<a href="https://jar.or.jp/" style="color:deepskyblue">こちら</a>（モデルロケット協会のページ）</div>
+                  <div class="intro">モデルロケットは本格的な火薬を燃やして得られる推力で打ち上げ、およそ90~200m程度上空まで飛ばすことができます。<br>JAXAやNASAなどの宇宙に飛ばすロケットとは、使う燃料に違いがありますが、それ以外の機体の設計、製作技術については本物のロケットと似通うところが多くあり、本格的な航空宇宙の教材として世界ではかなり有名です。<br>日本でも近年、人気が高まってきており、2024年10月の全国大会では、200名以上が参加しました（日本モデルロケット協会調べ）<br><img src="" alt="モデルロケットの立ち位置" width="100%"><br>《写真》モデルロケットの立ち位置<br> >詳しくは<a href="https://jar.or.jp/" style="color:deepskyblue">こちら</a>（モデルロケット協会のページ）</div>
                   </div>
                 </div>
                 <div class="switchdsp">
