--- a/history.html
+++ b/history.html
@@ -94,7 +94,7 @@
             <br>※全国大会について<a href="https://jar.or.jp/nationalcompetition/" style="color:deepskyblue">[協会のページ]</a>をどうぞ
           </div>
           <div class="col-md-4">
-            <img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
+            <img src="image/zenkoku-zentai.jpg" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
           </div>
         </div>
       </div>
@@ -132,7 +132,7 @@
             <br>最初はたった1人の生徒の思いから始まったロケット班。2年間の努力が実を結び、やっと結果を残すことができました。この結果を残せたのは、学校の先生方や保護者の皆さま、そしてロケット製作のアドバイスをくださった方々のおかげです。
           </div>
           <div class="col-md-4">
-            <img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
+            <img src="image/zenkokuyuusyou.jpg" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
             2025年2月に福島県南相馬市にて行われたロケット甲子園で初出場にして初優勝を飾りました。<br>初めての大型機体の製作にあたり、モデルロケットに詳しい先生方、先輩等に頭を下げ、技術を学びました。頑張ってきた成果を発揮することができ、ついに世界出場が決まりました。
           </div>
           <div class="col-md-4">
-            <img src="" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
+            <img src="image/kaushi-yuusyou.jpg" class="img-fluid" alt="人物が映った画像につき、保護者の許可をとってから掲載します" width="100%">
           </div>
         </div>
       </div>
