--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
     </script>
 </head>
 <body>
+  <div class="contact">
     <header class="header">
         <nav>
           <div class="logo">
@@ -51,7 +52,7 @@
                 </div>
             </div>
         </div>
-        <div class="container2">
+    </div>
             <footer class="footer">
             <br>
             <div class="row">
@@ -80,9 +81,8 @@
               </span>
             </div>
           </footer>
-        </div>
-      </div>
     </div>
+  </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
