--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <div class="main">
         <div class="title">
           <h1>ロケット甲子園優勝</h1>
-          <p>高校生が手作りロケットで世界に挑む！</p>
+          <p>高校生がモデルロケットで世界に挑む！</p>
         </div>        
         <div class="container">
           <div class="row">
             <div class="col-md-12">
               <h2>全国大会 <br class="br-sp">ロケット甲子園 <br class="br-sp">２冠達成</h2>
               <br>
-              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の<strong>設計、開発</strong>を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、<strong>パリ航空ショー</strong>に参加、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を<strong>地域の方々、小学生、後輩等</strong>に広める活動にも積極的に参加し、モデルロケットの<strong>良さを広め</strong>、<strong>挑戦してみるとっかかりを作る</strong>活動もしています。</div>
+              <div class="intro">こんにちは。東京都立小石川中等教育学校、物理研究会のロケット班です。本格的な火薬を用いて90~200m程度上空に飛翔する<strong>「モデルロケット」</strong>の設計、開発を行っています。<br>2024年度では、小型（20～30cm程度）機体の全国大会（第45回モデルロケット全国大会）で<strong>総合優勝</strong>、大型（65cm～1m）機体の全国大会（ロケット甲子園2024）にて<strong>優勝</strong>、日本代表として<strong>世界大会（IRC、パリ大会）に出場</strong>し、パリ航空ショーに参加、パリの空に僕たちのロケットを打ち上げてきます。<br>その他にも、モデルロケットの活動を地域の方々、小学生、後輩等に広める活動にも積極的に参加し、モデルロケットの良さを広め、挑戦してみるとっかかりを作る活動もしています。</div>
             </div>
             <div class="col-md-7">
               <h2>小石川ロケット班<br class="br-sp">について知る</h2>
